...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation_layer.HomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/currentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Default"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
...
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp" />

    <SearchView
        android:id="@+id/movieSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/userSearchTitle"
        android:layout_width="wrap_content"
...
